# gosub-engine

./: .gitattributes  .gitignore  AUTHORS  An+B.json  CONTRIBUTING.md  Cargo.toml  Contributing.md  LICENSE  Makefile  README  README.md  README.rst  SECURITY.md  audit.toml  clippy.toml  cloc-it.sh  compile-all.sh  component_value_list.json  component_values.json  declaration_list.json  deny.toml  hello.html  index.html  ms.css  ms2.css  one_declaration.json  start.bat  style1.css  style2.css  style3.css  style4.css  stylesheet_bytes.json  test-utils.sh  test.css  test.html  test1.html  test2.css  update-subtree
crates/css3/: Cargo.toml
crates/css3/src/: css3.rs  lib.rs
crates/gosub-bindings/: Cargo.toml  Makefile  README.md
crates/gosub-bindings/include/: gosub_api.h  nodes.h
crates/gosub-bindings/src/: gosub_api.c  lib.rs  nodes.c  wrapper.rs
crates/gosub-bindings/tests/: render_tree_test.c  rendertree_test.c
crates/gosub-html5/: Cargo.toml
crates/gosub-html5/src/: error_logger.rs  errors.rs  lib.rs  node.rs  parser.rs  tokenizer.rs
crates/gosub-webexecutor/: Cargo.toml
crates/gosub-webexecutor/src/: js.rs  test.rs
crates/gosub_bindings/: Cargo.toml  Makefile  README.md
crates/gosub_bindings/include/: nodes.h  properties.h
crates/gosub_bindings/src/: lib.rs  wrapper.rs
crates/gosub_cairo/: Cargo.toml
crates/gosub_cairo/src/: border.rs  brush.rs  color.rs  debug.rs  elements.rs  engine_backend.rs  gradient.rs  image.rs  lib.rs  rect.rs  render.rs  scene.rs  text.rs  transform.rs  vello_svg.rs
crates/gosub_config/: Cargo.toml  README.md
crates/gosub_config/src/: errors.rs  lib.rs  settings.json  settings.rs  storage.rs
crates/gosub_css3/: Cargo.toml  README.md
crates/gosub_css3/benches/: css_parser.rs
crates/gosub_css3/docs/: css_styles.md
crates/gosub_css3/examples/: css_corpus_match.rs
crates/gosub_css3/fuzz/: Cargo.toml  css3.dict
crates/gosub_css3/resources/: useragent.css
crates/gosub_css3/src/: ast.rs  colors.rs  convert.rs  errors.rs  functions.rs  lib.rs  logging.rs  matcher.rs  node.rs  parser.rs  parser_config.rs  stylesheet.rs  system.rs  tokenizer.rs  unicode.rs  walker.rs
crates/gosub_engine/: Cargo.toml  README.md
crates/gosub_engine/examples/: metrics_cli.rs
crates/gosub_engine/src/: engine.rs  html.rs  lib.rs  metrics.rs  net.rs
crates/gosub_engine_core/: Cargo.toml
crates/gosub_engine_core/examples/: hello_world.rs
crates/gosub_engine_core/src/: engine.rs  html.rs  lib.rs  net.rs  render.rs
crates/gosub_fontmanager/: Cargo.toml  README.md
crates/gosub_fontmanager/src/: cosmic_system.rs  flatland.rs  font_manager.rs  lib.rs  pango_system.rs  parley_system.rs  skia_system.rs
crates/gosub_html5/: Cargo.toml  README.md
crates/gosub_html5/benches/: html_parser.rs  tokenizer.rs  tree_construction.rs  tree_iterator.rs
crates/gosub_html5/docs/: parsing.md
crates/gosub_html5/examples/: html5-parser.rs  parse_timing.rs
crates/gosub_html5/fuzz/: .gitignore  Cargo.toml  html.dict
crates/gosub_html5/src/: async_parse.rs  document.rs  dom.rs  element_class.rs  error_logger.rs  errors.rs  lib.rs  node.rs  parser.rs  testing.rs  tokenizer.rs  visit.rs  writer.rs
crates/gosub_instance/: Cargo.toml
crates/gosub_instance/src/: lib.rs
crates/gosub_interface/: Cargo.toml  README.md
crates/gosub_interface/src/: async_executor.rs  chrome.rs  config.rs  css3.rs  document.rs  document_handle.rs  draw.rs  errors.rs  eventloop.rs  fetcher.rs  font.rs  font_system.rs  geo.rs  html5.rs  input.rs  instance.rs  layout.rs  lib.rs  node.rs  parser_config.rs  render_backend.rs  render_tree.rs  request.rs  svg.rs  types.rs
crates/gosub_jsapi/: Cargo.toml  README.md
crates/gosub_jsapi/src/: console.rs
crates/gosub_lattice/: Cargo.toml  README.md
crates/gosub_lattice/doc/: README.md
crates/gosub_lattice/src/: compute.rs  geo.rs  grid.rs  lib.rs  mock.rs  model.rs  tests.rs  types.rs
crates/gosub_net/: Cargo.toml
crates/gosub_net/examples/: fetcher.rs  fetcher_harness.rs  simple_fetch.rs
crates/gosub_net/src/: decision.rs  decision_hub.rs  dns.rs  emitter.rs  errors.rs  events.rs  fetch.rs  fetcher.rs  fs_utils.rs  http.rs  io_runtime.rs  io_types.rs  lib.rs  net_types.rs  pump.rs  req_ref_tracker.rs  shared_body.rs  spawn.rs  types.rs  utils.rs
crates/gosub_pipeline/: .gitignore  Cargo.toml  README.md  viewpage.sh
crates/gosub_pipeline/examples/: pipeline_cairo.rs  pipeline_skia.rs  pipeline_vello.rs  rendertree.rs  screenshot.rs  screenshot_url.rs
crates/gosub_pipeline/src/: bridge.rs  common.rs  compositor.rs  layering.rs  layouter.rs  lib.rs  painter.rs  rasterizer.rs  rendertree_builder.rs  tests.rs  tiler.rs
crates/gosub_render_backend/: Cargo.toml
crates/gosub_render_backend/src/: geo.rs  layout.rs  lib.rs  svg.rs
crates/gosub_render_pipeline/: Cargo.toml  README.md
crates/gosub_render_pipeline/examples/: pipeline_bench.rs  rendertree.rs  screenshot.rs  screenshot_url.rs
crates/gosub_render_pipeline/src/: common.rs  compositor.rs  layouter.rs  lib.rs  painter.rs  rasterizer.rs  render.rs  rendertree_builder.rs  tests.rs  tiler.rs
crates/gosub_render_pipeline/tools/: README.md  compare_css.py
crates/gosub_render_utils/: Cargo.toml
crates/gosub_render_utils/src/: layout.rs  lib.rs  position.rs  render_tree.rs  style.rs
crates/gosub_renderer/: Cargo.toml
crates/gosub_renderer/src/: debug.rs  draw.rs  lib.rs  position.rs  render.rs  render_tree.rs  renderer.rs  window.rs
crates/gosub_renderer_cairo/: Cargo.toml  README.md
crates/gosub_renderer_cairo/src/: backend.rs  compositor.rs  lib.rs  rasterizer.rs
crates/gosub_renderer_dynamic/: Cargo.toml  README.md
crates/gosub_renderer_dynamic/src/: lib.rs
crates/gosub_renderer_skia/: Cargo.toml  README.md
crates/gosub_renderer_skia/src/: backend.rs  compositor.rs  lib.rs  rasterizer.rs
crates/gosub_renderer_vello/: Cargo.toml  README.md
crates/gosub_renderer_vello/src/: backend.rs  compositor.rs  font.rs  (+3 more)
crates/gosub_rendering/: Cargo.toml
crates/gosub_shared/: Cargo.toml  README.md
crates/gosub_storage/: Cargo.toml
(+1348 files in other folders)
