[package]
name = "gosub_bin"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub Browser Engine"
license = "MIT"
repository = "https://github.com/gosub-io/gosub-engine"
readme = "README.md"
keywords = ["html5", "parser", "browser", "Rust", "DOM"]

[workspace]
members = [
    "crates/*"
]
exclude = [
    "crates/gosub_storage",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[example]]
name = "html5-parser"

[[example]]
name = "pipeline-test"

[[example]]
name = "tutorial"
path = "examples/tutorial.rs"

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"

[[example]]
name = "multi-tab"
path = "examples/multi-tab.rs"

[[example]]
name = "gtk4-cairo"
path = "examples/gtk4-cairo/main.rs"

[[example]]
name = "egui-vello-paned"
path = "examples/egui-vello-paned/main.rs"

[[example]]
name = "egui-vello"
path = "examples/egui-vello/main.rs"

[[example]]
name = "egui-cairo"
path = "examples/egui-cairo/main.rs"

[[example]]
name = "winit-cairo"
path = "examples/winit-cairo/main.rs"

[[example]]
name = "winit-vello"
path = "examples/winit-vello/main.rs"

[[example]]
name = "gtk4-skia"
path = "examples/gtk4-skia/main.rs"

[[example]]
name = "egui-skia"
path = "examples/egui-skia/main.rs"

[[example]]
name = "winit-skia"
path = "examples/winit-skia/main.rs"

[[example]]
name = "winit-skia-gpu"
path = "examples/winit-skia-gpu/main.rs"

[[example]]
name = "gtk4-skia-gpu"
path = "examples/gtk4-skia-gpu/main.rs"

[[example]]
name = "pipeline-screenshot"
path = "examples/pipeline-screenshot/main.rs"

[[example]]
name = "metrics-cli"
path = "examples/metrics_cli.rs"

[[bench]]
name = "tree_iterator"
harness = false

[[bench]]
name = "bytestream"
harness = false

[dependencies]
gosub_interface = { version = "0.1.1", path = "./crates/gosub_interface", features = [], registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "./crates/gosub_shared", features = [], registry = "gosub" }
gosub_html5 = { version = "0.1.1", path = "./crates/gosub_html5", features = [], registry = "gosub" }
gosub_css3 = { version = "0.1.1", path = "./crates/gosub_css3", features = [], registry = "gosub" }
# Dependencies are needed for gosub_engine itself, and some of the binaries in src/bin.
anyhow = "1.0.102"
url = "2.5.8"
log = "0.4.32"

# Dependencies for testing and development. Also used for some of the examples (like the gtk/vello renderer).
[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
test-case = "3.3.1"
winit = "0.30.12"
softbuffer = "0.4"
vello = "0.8.0"
skia-safe = "0.87.0"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
cookie = { version = "0.18.1", features = ["secure", "private"] }
url = "2.5.8"
clap = { version = "4.6.0", features = ["derive"] }
simple_logger = "5.2.0"
log = "0.4.32"
anyhow = "1.0.102"
image = "0.25.10"
slotmap = "1.1.1"
gosub_engine = { path = "./crates/gosub_engine", features = ["ui_eframe", "backend_vello"] }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline", features = ["backend_vello", "backend_skia", "backend_skia_gl"] }
once_cell = "1.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "macro-diagnostics"] }
eframe = { version = "0.34", features = ["wgpu"] }
egui = "0.31"
indicatif = "0.18"
parking_lot = "0.12"
rand = "0.10.1"
cow-utils = "0.1"
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
console-subscriber = "0.5"

[features]
# Enables extended debugging information during parsing.
debug_parser = []
debug_parser_verbose = []
# Enables the HTTP metrics server (http://127.0.0.1:9090/metrics) in examples.
metrics = ["gosub_engine/metrics"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = ["HtmlCanvasElement", "Window", "Document", "Element"] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.64"
wasm-bindgen = "0.2.114"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
# Enable the 'js' feature on getrandom 0.2/0.3 pulled in transitively (e.g. via uuid, rand).
# The renamed aliases force Cargo to merge features on those resolved versions.
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# No default features on WASM: excludes sqlite_cookie_store (needs C SQLite) and parley_layout (needs freetype).
gosub_engine = { path = "./crates/gosub_engine", default-features = false, features = ["backend_vello"] }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline", features = ["backend_vello"] }
gosub_shared = { version = "0.1.1", path = "./crates/gosub_shared", registry = "gosub" }
parking_lot = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gosub_v8 = { version = "0.1.1", path = "./crates/gosub_v8", features = [], registry = "gosub" }
gosub_webexecutor = { version = "0.1.1", path = "./crates/gosub_webexecutor", features = [], registry = "gosub" }
gosub_config = { version = "0.1.1", path = "./crates/gosub_config", features = [], registry = "gosub" }
gosub_jsapi = { version = "0.1.1", path = "./crates/gosub_jsapi", features = [], registry = "gosub" }
gosub_taffy = { version = "0.1.1", path = "./crates/gosub_taffy", features = [], registry = "gosub" }
gosub_net = { version = "0.1.1", path = "./crates/gosub_net", features = [], registry = "gosub" }
futures = "0.3.32"
cookie = { version = "0.18.1", features = ["secure", "private"] }
clap = { version = "4.6.0", features = ["derive"] }
derive_more = "2.1.1"
simple_logger = "5.2.0"
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
gosub_fontmanager = { version = "0.1.0", path = "./crates/gosub_fontmanager", registry = "gosub" }

[target.'cfg(unix)'.dev-dependencies]
gtk4 = "0.11.1"
gosub_engine = { path = "./crates/gosub_engine", features = ["gtk4", "backend_cairo"] }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline", features = ["backend_cairo"] }

[patch.crates-io]
vello = { git = "https://github.com/linebender/vello", rev = "1b24e77ba4e01d12f5db86a9b1b5f2cf828a6a33" }
vello_encoding = { git = "https://github.com/linebender/vello", rev = "1b24e77ba4e01d12f5db86a9b1b5f2cf828a6a33" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
#rustflags = ["-C", "target-cpu=native"] # Currently unstable and it can cause problems on older CPUs (don't have newer CPU instructions).

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
