[package]
name = "gosub_bin"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub Browser Engine"
license = "MIT"
repository = "https://github.com/gosub-io/gosub-engine"
readme = "README.md"
keywords = ["html5", "parser", "browser", "Rust", "DOM"]
autoexamples = false

[lints]
workspace = true

[workspace]
members = [
    "crates/*",
    "crates/gosub_css3/tools/generate_definitions",
    "examples/egui-cairo",
    "examples/egui-skia",
    "examples/egui-vello",
    "examples/gtk4-cairo",
    "examples/gtk4-skia",
    "examples/gtk4-skia-gpu",
    "examples/winit-cairo",
    "examples/winit-skia",
    "examples/winit-skia-gpu",
    "examples/winit-vello",
    "bin/gosub-screenshot",
]
exclude = [
    "crates/gosub_storage",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"


[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytemuck = "1.25.0"
bytes = "1.10.1"
cairo-rs = "0.22.0"
chrono = "0.4.45"
clap = "4.6.0"
cookie = "0.18.1"
cosmic-text = "0.19.0"
cow-utils = "0.1.3"
criterion = "0.8.2"
dashmap = "7.0.0-rc2"
derive_more = "2.1.1"
eframe = "0.35.0"
egui = "0.35.0"
futures = "0.3.32"
futures-core = "0.3.31"
futures-util = "0.3.31"
gdk4-wayland = "0.11"
gdk4-x11 = "0.11"
getrandom = "0.4.2"
gtk4 = "0.11.1"
http = "1.4.1"
image = "0.25.10"
indicatif = "0.18.0"
js-sys = "0.3.91"
lazy_static = "1.5.0"
log = "0.4.29"
nom = "8.0.0"
once_cell = "1.21.3"
pangocairo = "0.22.0"
parking_lot = "0.12.4"
png = "0.18.1"
parley = {version = "0.11.0", default-features = false}
pollster = "1.0.1"
rand = "0.10.1"
regex = "1.12.3"
reqwest = {version = "0.13.3", default-features = false}
resvg = "0.47.0"
serde = "1.0.228"
serde_json = "1.0.150"
simple_logger = "5.2.0"
# svg/wayland/x11 make the workspace-wide feature union (with gl, egl,
# textlayout from the renderer/examples) match a published skia-binaries
# bundle exactly; any other union silently rebuilds Skia's C++ from source
# (~14 min per cold CI job).
skia-safe = { version = "0.99.0", features = ["svg", "wayland", "x11"] }
softbuffer = "0.4"
taffy = {version = "0.12.1", default-features = false}
tempfile = "3.21.0"
test-case = "3.3.1"
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-log = "0.2"
tracing-subscriber = "0.3"
url = "2.5.8"
uuid = "1.22.0"
vello = "0.8.0"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
wgpu = "29.0.0"
winit = "0.30.12"
[[example]]
name = "html5-parser"

[[example]]
name = "pipeline-test"

[[example]]
name = "tutorial"
path = "examples/tutorial.rs"

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"

[[example]]
name = "multi-tab"
path = "examples/multi-tab.rs"

[[example]]
name = "metrics-cli"
path = "examples/metrics_cli.rs"

[[example]]
name = "config-store"
path = "examples/config-store.rs"

[[bench]]
name = "tree_iterator"
harness = false

[[bench]]
name = "bytestream"
harness = false

[dependencies]
gosub_interface = { version = "0.1.1", path = "./crates/gosub_interface", features = [], registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "./crates/gosub_shared", features = [], registry = "gosub" }
gosub_html5 = { version = "0.1.1", path = "./crates/gosub_html5", features = [], registry = "gosub" }
gosub_css3 = { version = "0.1.1", path = "./crates/gosub_css3", features = [], registry = "gosub" }
# Dependencies are needed for gosub_engine itself, and some of the binaries in src/bin.
anyhow = { workspace = true }
url = { workspace = true }
log = { workspace = true }

# Dependencies for benchmarks and the small single-file examples only.
[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
test-case = { workspace = true }
gosub_engine = { path = "./crates/gosub_engine" }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline" }
once_cell = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
anyhow = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
cow-utils = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-log = { workspace = true }
reqwest = { workspace = true, default-features = true, features = ["json", "rustls"] }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "macro-diagnostics"] }

[features]
# Enables extended debugging information during parsing.
debug_parser = []
debug_parser_verbose = []
# Enables the HTTP metrics server (http://127.0.0.1:9090/metrics) in examples.
metrics = ["gosub_engine/metrics"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement", "Window", "Document", "Element"] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
# Enable the 'js' feature on getrandom 0.2/0.3 pulled in transitively (e.g. via uuid, rand).
# The renamed aliases force Cargo to merge features on those resolved versions.
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# No default features on WASM: excludes sqlite_cookie_store (needs C SQLite).
gosub_engine = { path = "./crates/gosub_engine", default-features = false }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline" }
gosub_renderer_vello = { path = "./crates/gosub_renderer_vello" }
gosub_shared = { version = "0.1.1", path = "./crates/gosub_shared", registry = "gosub" }
parking_lot = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gosub_v8 = { version = "0.1.1", path = "./crates/gosub_v8", features = [], registry = "gosub" }
gosub_webexecutor = { version = "0.1.1", path = "./crates/gosub_webexecutor", features = [], registry = "gosub" }
gosub_config = { version = "0.1.1", path = "./crates/gosub_config", features = [], registry = "gosub" }
gosub_jsapi = { version = "0.1.1", path = "./crates/gosub_jsapi", features = [], registry = "gosub" }
gosub-sonar = "0.1.0"
futures = { workspace = true }
cookie = { workspace = true, features = ["secure", "private"] }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
simple_logger = { workspace = true }
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
gosub_fontmanager = { version = "0.1.0", path = "./crates/gosub_fontmanager", registry = "gosub" }

[target.'cfg(unix)'.dev-dependencies]
gtk4 = { workspace = true }
gosub_engine = { path = "./crates/gosub_engine" }
gosub_render_pipeline = { path = "./crates/gosub_render_pipeline" }

[patch.crates-io]
vello = { git = "https://github.com/linebender/vello", rev = "1b24e77ba4e01d12f5db86a9b1b5f2cf828a6a33" }
vello_encoding = { git = "https://github.com/linebender/vello", rev = "1b24e77ba4e01d12f5db86a9b1b5f2cf828a6a33" }

[profile.dev]
# Keep the linker from copying the (very large) DWARF into every binary on each
# link — debug info stays in the .o files instead. Combined with line-tables-only
# this cuts re-link time of the big binaries (gosub-screenshot, the example
# browsers) from tens of seconds to a few, and shrinks them ~5x. Backtraces still
# have file/line; only local-variable inspection is dropped.
split-debuginfo = "unpacked"
debug = "line-tables-only"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
#rustflags = ["-C", "target-cpu=native"] # Currently unstable and it can cause problems on older CPUs (don't have newer CPU instructions).

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
