[package]
name = "css3"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]

[dependencies]
engine = { path = "../engine", features = [] }

#phf = { version = "0.11.2", features = ["macros"] }
derive_more = "0.99"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = {version = "1.0", features = ["preserve_order"]}
#serde_derive = "1.0"
#regex = "1"
lazy_static = "1.4"
#typed-arena = "2.0.2"
thiserror = "1.0.57"
#ureq = "2.9.5"
anyhow = "1.0.79"
#uuid = { version = "1.7.0", features = ["v4"] }
#colored = "2.1.0"
#walkdir = "2.3"
#nom = "7.1.3"
#nom_locate = "4.2.0"
#sqlite = "0.33.0"
#wildmatch = "2.2.0"
#clap = { version = "4.5.0", features = ["derive"] }
#cli-table = "0.4.7"
#textwrap = "0.16.0"
log = "0.4.20"
#domain-lookup-tree = "0.1"
#hickory-resolver = "0.24.0"
#simple_logger = "4.2.0"
#libc = "0.2"
#shared_singleton = "0.1.0"
#testing_logger = "0.1.1"
#cookie = { version = "0.18.0", features = ["secure", "private"] }
#http = "1.0.0"
#url = "2.5.0"
#v8 = "0.83.2"
#rand = "0.8.5"
#ouroboros = "0.18.3"
#chardet = "0.2.4"