[package]
name = "gosub_webexecutor"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"

[dependencies]
gosub_shared = { path = "../gosub-shared" }
colored = "2.1.0"
derive_more = "0.99"
lazy_static = "1.4"
thiserror = "1.0.57"
v8 = "0.83.2"
anyhow = "1.0.80"