[package]
name = "gosub_bindings"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"

[dependencies]
gosub_shared = { path = "../gosub_shared" }
gosub_rendering = { path = "../gosub_render_utils" }
gosub_html5 = { path = "../gosub_html5" }

[lib]
crate-type = ["staticlib"]


[lints]
workspace = true