[package]
name = "gosub_cairo"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Cairo render backend for Gosub"
license = "MIT"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared" }
gosub_interface = { version = "0.1.2", registry = "gosub", path = "../gosub_interface", features = [] }
gosub_svg = { version = "0.1.1", registry = "gosub", path = "../gosub_svg", features = ["resvg"] }
gosub_renderer = { version = "0.1.1", registry = "gosub", path = "../gosub_renderer" }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }
image = "0.25.2"
smallvec = "1.13.2"
anyhow = "1.0.89"
futures = "0.3.30"

cairo-rs = {  version = "0.19.4", features = ["use_glib", "freetype"] }
kurbo = "0.11.1"
peniko = "0.3.1"
skrifa = "0.27.0"
log = "0.4.22"
uuid = { version = "1.12.1", features = ["v4"] }
parley = "0.2.0"
once_cell = "1.20.2"
pango = "0.20.7"
pangocairo = "0.19.8"