[package]
name = "gosub_cairo"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Cairo render backend for Gosub"
license = "MIT"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared" }
gosub_interface = { version = "0.1.2", registry = "gosub", path = "../gosub_interface", features = [] }
gosub_engine_api = { version = "0.1.0", path = "../gosub_engine_api" }
gosub_svg = { version = "0.1.1", registry = "gosub", path = "../gosub_svg", features = ["resvg"] }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }
image = "0.25.10"
smallvec = "1.15.1"

cairo-rs = {  version = "0.22.0", features = ["use_glib"] }
cairo-sys-rs = { version = "0.22.0", features = ["use_glib", "freetype"] }
freetype-rs = "0.36.0"
kurbo = "0.13.0"
peniko = "0.6.0"
log = "0.4.29"
anyhow = "1"
