[package]
name = "gosub_config"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Configuration management for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub",  path = "../gosub_shared", features = [] }
parking_lot = { workspace = true }
serde_derive = "1.0.228"
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
thiserror = { workspace = true }
wildmatch = "2.6.1"
log = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
cow-utils = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = "0.39.0"

[dev-dependencies]
testing_logger = "0.1.1"