[package]
name = "gosub_config"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Configuration management for Gosub"

[dependencies]
parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wildmatch = "2.6.1"
log = { workspace = true }
cow-utils = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = "0.39.0"

[dev-dependencies]
testing_logger = "0.1.1"

[lints]
workspace = true
