[package]
name = "gosub_css3"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "CSS3 parser for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
lazy_static = "1.5.0"
log = "0.4.29"
simple_logger = "5.2.0"
anyhow = { version = "1.0.102", features = [] }
colors-transform = "0.2.11"
rand = "0.9.2"
itertools = "0.14.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
nom = "8.0.0"
cow-utils = "0.1.3"
indexmap = { version = "2.13.0", optional = true }

[features]
default = []
unresolved_syntax = ["dep:indexmap"]
