[package]
name = "gosub_css3"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "CSS3 parser for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
lazy_static = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
anyhow = { workspace = true, features = [] }
colors-transform = "0.2.11"
rand = { workspace = true }
itertools = "0.14.0"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
nom = { workspace = true }
cow-utils = { workspace = true }
indexmap = { version = "2.13.0", optional = true }

[features]
default = []
unresolved_syntax = ["dep:indexmap"]
