[package]
name = "gosub_css3"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "CSS3 parser for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
log = { workspace = true }
anyhow = { workspace = true, features = [] }
colors-transform = "0.2.11"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nom = { workspace = true }
cow-utils = { workspace = true }
indexmap = { version = "2.13.0", optional = true }

[dev-dependencies]
simple_logger = { workspace = true }

[features]
default = []
unresolved_syntax = ["dep:indexmap"]

[lints]
workspace = true
