[package]
name = "gosub_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "gosub_engine"
crate-type = ["rlib"]

[dependencies]
gosub_net = { version = "0.1.1", path = "../gosub_net" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared" }
gosub_html5 = { version = "0.1.1", path = "../gosub_html5" }
gosub_css3 = { version = "0.1.2", path = "../gosub_css3" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface" }
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_renderer_cairo = { version = "0.1.0", path = "../gosub_renderer_cairo", optional = true, default-features = false }
gosub_renderer_skia = { version = "0.1.0", path = "../gosub_renderer_skia", optional = true }
gosub_renderer_vello = { version = "0.1.0", path = "../gosub_renderer_vello", optional = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.3", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls", "stream"] }
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
    "io-util",
] }
thiserror = "2.0.18"
rand = "0.10.1"
futures = { version = "0.3", features = ["executor"] }
anyhow = "1.0.98"
http = "1.4.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
log = "0.4.27"
lazy_static = "1.5.0"
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.2"
tracing = "0.1.41"

r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.33", optional = true, features = ["bundled"] }

gtk4 = { version = "0.11", optional = true }
cairo-rs = { version = "0.22", optional = true }

skia-safe = { version = "0.87.0", optional = true }

vello = { version = "0.8.0", optional = true }
wgpu = { version = "29.0.0", optional = true }

winit = { version = "0.30.12", optional = true }

eframe = { version = "0.34.3", optional = true, features = ["wgpu"] }
egui = { version = "0.31.0", optional = true }
num_cpus = "1.17.0"
rayon = "1"
time = "0.3.41"
tokio-util = { version = "0.7.16", features = ["io"] }
tempfile = "3.21.0"
bitflags = "2.11.1"
futures-util = "0.3.31"
cow-utils = "0.1.3"
bytes = "1.10.1"
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"
psl = "2"
parking_lot = "0.12.4"
indicatif = "0.18.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-core = "0.3.31"
mime = "0.3.17"
chrono = "0.4.42"
regex = "1.11.1"
mimetype-detector = "0.2.2"
image = "0.25.8"
async-trait = "0.1.89"
async-channel = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-wayland = { version = "0.11", optional = true, features = [
    "wayland_crate",
] }
gdk4-x11 = { version = "0.11", optional = true }

[features]
default = ["sqlite_cookie_store", "parley_layout"]
ui_eframe = ["dep:eframe", "dep:egui"]
winit = ["dep:winit", "dep:wgpu"]
gtk4 = ["dep:gtk4", "dep:cairo-rs"]
sqlite_cookie_store = ["r2d2", "r2d2_sqlite"]
pipeline = []
backend_cairo = ["pipeline", "dep:cairo-rs", "dep:gosub_renderer_cairo", "gosub_render_pipeline/backend_cairo"]
backend_cairo_pango = ["backend_cairo", "dep:gtk4", "gosub_renderer_cairo/text_pango"]
backend_vello = ["pipeline", "dep:vello", "dep:wgpu", "dep:gosub_renderer_vello", "gosub_render_pipeline/backend_vello"]
backend_skia = ["pipeline", "dep:skia-safe", "dep:gosub_renderer_skia", "gosub_render_pipeline/backend_skia"]
parley_layout = []
metrics = []

wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]
