[package]
name = "gosub_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "gosub_engine"
crate-type = ["rlib"]

[dependencies]
gosub-sonar = "0.1.0"
gosub_shared = { version = "0.1.1", path = "../gosub_shared" }
gosub_config = { version = "0.1.1", path = "../gosub_config" }
gosub_html5 = { version = "0.1.1", path = "../gosub_html5" }
gosub_css3 = { version = "0.1.2", path = "../gosub_css3" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface" }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
uuid = { workspace = true, features = ["v4", "serde"] }
reqwest = { workspace = true, default-features = true, features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls", "stream"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
    "io-util",
] }
thiserror = { workspace = true }
rand = { workspace = true }
futures = { workspace = true, features = ["executor"] }
anyhow = { workspace = true }
http = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
env_logger = "0.11.8"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-log = { workspace = true }
tracing = { workspace = true }

r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.33", optional = true, features = ["bundled"] }

wgpu = { workspace = true, optional = true }

winit = { workspace = true, optional = true }

eframe = { workspace = true, features = ["wgpu"], optional = true }
egui = { workspace = true, optional = true }
num_cpus = "1.17.0"
rayon = "1"
time = "0.3.41"
tokio-util = { workspace = true, features = ["io"] }
tempfile = { workspace = true }
bitflags = "2.11.1"
futures-util = { workspace = true }
cow-utils = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
psl = "2"
parking_lot = { workspace = true }
indicatif = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures-core = { workspace = true }
mime = "0.3.17"
chrono = { workspace = true }
regex = { workspace = true }
mimetype-detector = "0.2.2"
image = { workspace = true }
async-trait = "0.1.89"
async-channel = "2.5.0"
allsorts = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-wayland = { workspace = true, features = [
    "wayland_crate",
], optional = true }
gdk4-x11 = { workspace = true, optional = true }

[features]
default = ["sqlite_cookie_store", "parley_layout"]
ui_eframe = ["dep:eframe", "dep:egui"]
winit = ["dep:winit", "dep:wgpu"]
sqlite_cookie_store = ["r2d2", "r2d2_sqlite"]
parley_layout = []
metrics = []

wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]

[lints]
workspace = true
